Gonna try and put drawing logic into surfaceView, bypassing the thread entirely, I think that's making this too complicated